# playwright-plus-python-mcp

./: main.py  pyproject.toml
src/playwright_server/: server.py
